SERVER-93609 Ignore oplog entries without session info during session migration (#26257)

GitOrigin-RevId: ca4fb7a67f380e06de9adb2e103da137afacb3c3